<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryblue"
    tools:context=".ui.dashboard.DashboardFragment2">

    <TextView
        android:id="@+id/text_dashboard2"
        android:layout_width="286dp"
        android:layout_height="269dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_dashboard_comp"
        android:gravity="center"
        android:text="@string/dashboard_text2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/greetings2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_sleep"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:text="@string/stop_sleep"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label2"
        android:textColor="@color/graycolor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/time_awake_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_awake_text2"
        android:textColor="@color/graycolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/stop_sleep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard2"
        app:layout_constraintVertical_bias="0.681"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Time_Awake2"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginBottom="2dp"
        android:text="@string/time_awake2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/time_awake_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Time_Slp2"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:layout_marginBottom="2dp"
        android:text="@string/time_aslp2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/time_awake_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>