<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.insomniac.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.insomniac.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_dashboardFragment2"
            app:destination="@id/dashboardFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.insomniac.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/dashboardFragment2"
        android:name="com.example.insomniac.ui.dashboard.DashboardFragment2"
        android:label="fragment_dashboard2"
        tools:layout="@layout/fragment_dashboard2" >
        <action
            android:id="@+id/action_dashboardFragment2_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.insomniac.ui.statistics.StatisticsFragment"
        android:label="StatisticsFragment" />
</navigation>